# slidingpuzzle

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements-dev.txt  requirements-nn.txt  requirements.txt
.github/workflows/: tests.yaml
docs/: Makefile
docs/source/: conf.py  index.rst  install.rst  slidingpuzzle.nn.rst  slidingpuzzle.rst
requirements/: requirements-dev.txt
src/slidingpuzzle/: __about__.py  __init__.py  algorithms.py  board.py  heuristics.py  slidingpuzzle.py  state.py
src/slidingpuzzle/nn/: __init__.py  dataset.py  eval.py  heuristics.py  model.py  models.py  paths.py  train.py
tests/: test_algorithms.py  test_board.py  test_heuristics.py  test_nn.py  test_slidingpuzzle.py
