[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slidingpuzzle"
version = "0.0.14"
authors = [
  { name="Stephen Dunn", email="dunn.stephen@gmail.com" },
]
description = "Sliding Puzzle solver"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/entangledloops/slidingpuzzle"
"Bug Tracker" = "https://github.com/entangledloops/slidingpuzzle/issues"

[tool.black]
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "-v -x --ignore tests/test_nn.py"
minversion = "6.0"
pythonpath = [
    "src",
]
